a lit overflow fix 😏

--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -127,7 +127,7 @@
   position: absolute;
   opacity: 0.3;
   top: 4rem;
-  right: 0;
+  right: 2.5rem;
   z-index: -1.5;
   user-select: none;
 
